# eightball-c

./: .gitignore  CMakeLists.txt  README.md  empty-8ball.code-workspace  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  tes_rp2040.py
.cache/clangd/index/: cf_grammar_gen.cpp.29633991C072286E.idx  cf_grammar_gen.cpp.F8B8A25FBC580BF9.idx  esp_lcd_gc9a01.c.5AC4115A46CB9ABE.idx  esp_lcd_gc9a01.h.837618CC216F4D20.idx  files.cpp.4881EE27AC769921.idx  files.h.032770DB837ADF80.idx  font.cpp.E92EB7F2505B18A3.idx  gc9a01.h.13506BACA4D28734.idx  gen.h.DB791CF14E9294D5.idx  layout.cpp.235303ED67C1C9EE.idx  main.c.7DB8B555BC9584F1.idx  motion.c.685A180B02D48221.idx  mpu6050.c.E0D3CA25A2FBCF21.idx  mpu6050.h.474D08FAD90CCB5B.idx  mpu6050.h.50BE4E88D432D500.idx  screen.c.A858661C64FA1AAF.idx  screen.cpp.01EA9A86DD43FF5F.idx  screen.h.42AFC08E8A258890.idx  tft.cpp.9BCE009B6B06FD1B.idx  tft.h.9450915E37327911.idx
diskimg/: final.img  finalc3.img
main/: CMakeLists.txt  cf_grammar_gen.cpp  files.cpp  idf_component.yml  main.c  main.cpp  screen.c  screen.cpp  usbmsc.cpp
main/configs/: config_s3_2bw.json
main/files/: config.jso  config.json  config_c3.json  dsm5.txt  monaco14.bmf  monaco14.font  monaco20.bmf  monaco20.font  monaco28.font  nostra.txt
main/gc9a01/: EightBallScreen.cpp  EightBallScreen_layout.cpp  font.cpp  functions.cpp  layout.cpp  tft.cpp
main/headers/: capi.h  files.h  gc9a01.h  gen.h  mpu6050.h  screen.h  tft.h
main/includes/: accelerometer.h  coordinator.h  files.h  gen.h  gen.hpp  main.h  pins.h  tft.h
main/mpu6050/: motion.c
main/source/: accelerometer.cpp  cf_grammar_gen.cpp  coordinator.cpp  files.cpp  font.cpp  main.c  screen.c  tft.c  tft.cpp
main/source/screen/: font.cpp  layout.cpp  tft.cpp
main/text/: GrammarGenerator.cpp  LineReader.cpp  cf_grammar_gen.cpp
pytests/: boot.py  imu.py
